tests/snapshots/compile__wgsl_effect_bloom_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_bloom1_intensity: f32,
    u_control_bloom1_radius: f32,
    u_control_bloom1_threshold: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn bloom1_color(uv: vec2f) -> vec4f {
    let threshold = u.u_control_bloom1_threshold;
    let radius = max(u.u_control_bloom1_radius, 1e-4);
    var glow = vec4f(0.0);
    var lit = 0.0;
    var offset = vec2f(0.0);
    for (var i = 0; i < 8; i++) {
        let a = f32(i) * 2.0 * PI / 8.0;
        let dir = vec2f(cos(a), sin(a));
        for (var j = 1; j <= 3; j++) {
            offset = dir * radius * f32(j) / 3.0;
            let sampled = defaultUvMap(uv + offset);
            let brightness = dot(unpremultiply(sampled).rgb, vec3f(0.299, 0.587, 0.114));
            glow += sampled * max(brightness - threshold, 0.0);
            lit += step(threshold, brightness);
        }
    }
    glow /= max(lit, 1.0);
    glow *= (u.u_control_bloom1_intensity);
    offset = vec2f(0.0);
    let original = defaultUvMap(uv + offset);
    return original + glow;
}

fn bloom1_value(uv: vec2f) -> f32 {
    let threshold = u.u_control_bloom1_threshold;
    let radius = max(u.u_control_bloom1_radius, 1e-4);
    var glow = vec4f(0.0);
    var lit = 0.0;
    var offset = vec2f(0.0);
    for (var i = 0; i < 8; i++) {
        let a = f32(i) * 2.0 * PI / 8.0;
        let dir = vec2f(cos(a), sin(a));
        for (var j = 1; j <= 3; j++) {
            offset = dir * radius * f32(j) / 3.0;
            let sampled = defaultUvMap(uv + offset);
            let brightness = dot(unpremultiply(sampled).rgb, vec3f(0.299, 0.587, 0.114));
            glow += sampled * max(brightness - threshold, 0.0);
            lit += step(threshold, brightness);
        }
    }
    glow /= max(lit, 1.0);
    glow *= (u.u_control_bloom1_intensity);
    offset = vec2f(0.0);
    let original = defaultUvMap(uv + offset);
    return clamp(dot(glow.rgb, vec3f(0.299, 0.587, 0.114)), 0.0, 1.0);
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(bloom1_value(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = bloom1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
