tests/snapshots/compile__wgsl_effect_blur_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_blur1_blurX: f32,
    u_control_blur1_blurY: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn blur1_output(uv: vec2f) -> vec4f {
    let blurStep = vec2f(u.u_control_blur1_blurX, u.u_control_blur1_blurY) / 720.0;
    var sum = vec4f(0.0);
    for (var y = -1; y <= 1; y++) {
        for (var x = -1; x <= 1; x++) {
            let offset = vec2f(f32(x), f32(y)) * blurStep;
            sum += defaultUvMap(uv + offset);
        }
    }
    return sum / 9.0;
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return blur1_output(uv);
}
