tests/snapshots/compile__wgsl_effect_camcordercrt_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_mix20_amount: f32,
    u_control_rgba19_a: f32,
    u_control_rgba19_b: f32,
    u_control_rgba19_g: f32,
    u_control_vignette10_radius: f32,
    u_control_vignette10_softness: f32,
    u_control_vignette11_radius: f32,
    u_control_vignette11_softness: f32,
    u_control_vignette12_radius: f32,
    u_control_vignette12_softness: f32,
    u_control_vignette13_radius: f32,
    u_control_vignette13_softness: f32,
    u_control_vignette14_radius: f32,
    u_control_vignette14_softness: f32,
    u_control_vignette15_radius: f32,
    u_control_vignette15_softness: f32,
    u_control_vignette16_radius: f32,
    u_control_vignette16_softness: f32,
    u_control_vignette17_radius: f32,
    u_control_vignette17_softness: f32,
    u_control_vignette18_radius: f32,
    u_control_vignette18_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
    u_control_vignette9_radius: f32,
    u_control_vignette9_softness: f32,
    u_opt_mix20_curve: i32,
    u_opt_mix20_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette10_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette10_radius;
    let softness = max(u.u_control_vignette10_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette9_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette9_radius;
    let softness = max(u.u_control_vignette9_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette11_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette11_radius;
    let softness = max(u.u_control_vignette11_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette12_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette12_radius;
    let softness = max(u.u_control_vignette12_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette13_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette13_radius;
    let softness = max(u.u_control_vignette13_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette14_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette14_radius;
    let softness = max(u.u_control_vignette14_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette15_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette15_radius;
    let softness = max(u.u_control_vignette15_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette16_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette16_radius;
    let softness = max(u.u_control_vignette16_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette17_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette17_radius;
    let softness = max(u.u_control_vignette17_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette18_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette18_radius;
    let softness = max(u.u_control_vignette18_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn camcordercrt1_color(uv: vec2f) -> vec4f {
    let curv = vignette5_mask(uv);
    let vig = vignette10_mask(uv);
    let r2 = dot(uv, uv);
    let crtUV = uv * (1.0 + r2 * curv * 0.3);
    let edgeFade = 1.0 - smoothstep(0.92, 1.0, abs(crtUV.y));
    let vigAmount = clamp(1.0 - r2 * vig * vig, 0.0, 1.0);
    let aber = vignette6_mask(uv);
    let scan = vignette7_mask(uv);
    let glw = vignette8_mask(uv);

    let abDist = length(crtUV);
    let abDir = select(vec2f(1.0, 0.0), crtUV / abDist, abDist > 0.001);
    let abOffset = aber * abDist * 0.04;
    let abLow = crtUV - abDir * abOffset;
    let abHigh = crtUV + abDir * abOffset;
    var rgb: vec3f;
    if (aber != 0.0) {
        rgb = vec3f((checkerboard3_output(abLow)).r, (checkerboard3_output(crtUV)).g, (checkerboard3_output(abHigh)).b);
    } else {
        rgb = (checkerboard3_output(crtUV)).rgb;
    }

    if (glw != 0.0) {
        let glowRadius = 6.0 / 720.0;
        let bloomSample = (checkerboard3_output(crtUV + vec2f(glowRadius, 0.0)) + checkerboard3_output(crtUV - vec2f(glowRadius, 0.0)) + checkerboard3_output(crtUV + vec2f(0.0, glowRadius)) + checkerboard3_output(crtUV - vec2f(0.0, glowRadius))) * 0.25;
        rgb += max(bloomSample.rgb - rgb, vec3f(0.0)) * glw;
    }

    let pixelY = (crtUV.y + 1.0) * 0.5 * 720.0;
    let scanLine = pow(sin(pixelY * PI) * 0.5 + 0.5, 1.5);
    rgb *= mix(vec3f(1.0), vec3f(scanLine), scan);

    let pixelX = (crtUV.x + 1.0) * 0.5 * 720.0;
    let subpixel = floor_mod(floor(pixelX), 3.0);
    let phosphorTint = vec3f(
        select(0.85, 1.0, subpixel == 0.0),
        select(0.85, 1.0, subpixel == 1.0),
        select(0.85, 1.0, subpixel == 2.0)
    );
    rgb *= mix(vec3f(1.0), phosphorTint, scan * 0.5);

    rgb *= vignette9_mask(uv);
    rgb *= vigAmount;
    rgb.r *= 1.05;
    rgb.b *= 0.92;
    rgb *= edgeFade;

    var camera = uv * 0.5;
    camera /= vignette13_mask(uv);
    let roll = vignette14_mask(uv);
    let cr = cos(roll);
    let sr = sin(roll);
    camera = vec2f(camera.x * cr - camera.y * sr, camera.x * sr + camera.y * cr);
    let pw = max(1.0 + camera.x * (vignette15_mask(uv)) + camera.y * (vignette16_mask(uv)), 0.001);
    camera /= pw;
    camera += vec2f(vignette17_mask(uv), vignette18_mask(uv));
    let fbUV = camera * 2.0;

    let prevFrame = checkerboard4_output(fbUV);
    let prevRgb = (prevFrame.rgb - 0.5) * (vignette12_mask(uv)) + 0.5;
    rgb += prevRgb * (vignette11_mask(uv));

    return vec4f(rgb, 1.0);
}

fn camcordercrt1_mask(uv: vec2f) -> f32 {
    let curv = vignette5_mask(uv);
    let vig = vignette10_mask(uv);
    let r2 = dot(uv, uv);
    let crtUV = uv * (1.0 + r2 * curv * 0.3);
    let edgeFade = 1.0 - smoothstep(0.92, 1.0, abs(crtUV.y));
    let vigAmount = clamp(1.0 - r2 * vig * vig, 0.0, 1.0);
    return edgeFade * vigAmount;
}

fn rgba19_output(uv: vec2f) -> vec4f {
    return vec4f(camcordercrt1_mask(uv), u.u_control_rgba19_g, u.u_control_rgba19_b, u.u_control_rgba19_a);
}

fn mix20_output(uv: vec2f) -> vec4f {
    let a = camcordercrt1_color(uv);
    let b = rgba19_output(uv);
    let amt = clamp(u.u_control_mix20_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix20_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix20_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix20_output(uv);
}
