tests/snapshots/compile__wgsl_effect_camcordercrt_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_camcordercrt1_aberration: f32,
    u_control_camcordercrt1_brightness: f32,
    u_control_camcordercrt1_curvature: f32,
    u_control_camcordercrt1_fbAmount: f32,
    u_control_camcordercrt1_fbContrast: f32,
    u_control_camcordercrt1_fbDriftX: f32,
    u_control_camcordercrt1_fbDriftY: f32,
    u_control_camcordercrt1_fbRotation: f32,
    u_control_camcordercrt1_fbTiltX: f32,
    u_control_camcordercrt1_fbTiltY: f32,
    u_control_camcordercrt1_fbZoom: f32,
    u_control_camcordercrt1_glow: f32,
    u_control_camcordercrt1_lastFrame: vec4f,
    u_control_camcordercrt1_scanlines: f32,
    u_control_camcordercrt1_vignette: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn camcordercrt1_color(uv: vec2f) -> vec4f {
    let curv = u.u_control_camcordercrt1_curvature;
    let vig = u.u_control_camcordercrt1_vignette;
    let r2 = dot(uv, uv);
    let crtUV = uv * (1.0 + r2 * curv * 0.3);
    let edgeFade = 1.0 - smoothstep(0.92, 1.0, abs(crtUV.y));
    let vigAmount = clamp(1.0 - r2 * vig * vig, 0.0, 1.0);
    let aber = u.u_control_camcordercrt1_aberration;
    let scan = u.u_control_camcordercrt1_scanlines;
    let glw = u.u_control_camcordercrt1_glow;

    let abDist = length(crtUV);
    let abDir = select(vec2f(1.0, 0.0), crtUV / abDist, abDist > 0.001);
    let abOffset = aber * abDist * 0.04;
    let abLow = crtUV - abDir * abOffset;
    let abHigh = crtUV + abDir * abOffset;
    var rgb: vec3f;
    if (aber != 0.0) {
        rgb = vec3f((defaultUvMap(abLow)).r, (defaultUvMap(crtUV)).g, (defaultUvMap(abHigh)).b);
    } else {
        rgb = (defaultUvMap(crtUV)).rgb;
    }

    if (glw != 0.0) {
        let glowRadius = 6.0 / 720.0;
        let bloomSample = (defaultUvMap(crtUV + vec2f(glowRadius, 0.0)) + defaultUvMap(crtUV - vec2f(glowRadius, 0.0)) + defaultUvMap(crtUV + vec2f(0.0, glowRadius)) + defaultUvMap(crtUV - vec2f(0.0, glowRadius))) * 0.25;
        rgb += max(bloomSample.rgb - rgb, vec3f(0.0)) * glw;
    }

    let pixelY = (crtUV.y + 1.0) * 0.5 * 720.0;
    let scanLine = pow(sin(pixelY * PI) * 0.5 + 0.5, 1.5);
    rgb *= mix(vec3f(1.0), vec3f(scanLine), scan);

    let pixelX = (crtUV.x + 1.0) * 0.5 * 720.0;
    let subpixel = floor_mod(floor(pixelX), 3.0);
    let phosphorTint = vec3f(
        select(0.85, 1.0, subpixel == 0.0),
        select(0.85, 1.0, subpixel == 1.0),
        select(0.85, 1.0, subpixel == 2.0)
    );
    rgb *= mix(vec3f(1.0), phosphorTint, scan * 0.5);

    rgb *= u.u_control_camcordercrt1_brightness;
    rgb *= vigAmount;
    rgb.r *= 1.05;
    rgb.b *= 0.92;
    rgb *= edgeFade;

    var camera = uv * 0.5;
    camera /= u.u_control_camcordercrt1_fbZoom;
    let roll = u.u_control_camcordercrt1_fbRotation;
    let cr = cos(roll);
    let sr = sin(roll);
    camera = vec2f(camera.x * cr - camera.y * sr, camera.x * sr + camera.y * cr);
    let pw = max(1.0 + camera.x * (u.u_control_camcordercrt1_fbTiltX) + camera.y * (u.u_control_camcordercrt1_fbTiltY), 0.001);
    camera /= pw;
    camera += vec2f(u.u_control_camcordercrt1_fbDriftX, u.u_control_camcordercrt1_fbDriftY);
    let fbUV = camera * 2.0;

    let prevFrame = u.u_control_camcordercrt1_lastFrame;
    let prevRgb = (prevFrame.rgb - 0.5) * (u.u_control_camcordercrt1_fbContrast) + 0.5;
    rgb += prevRgb * (u.u_control_camcordercrt1_fbAmount);

    return vec4f(rgb, 1.0);
}

fn camcordercrt1_mask(uv: vec2f) -> f32 {
    let curv = u.u_control_camcordercrt1_curvature;
    let vig = u.u_control_camcordercrt1_vignette;
    let r2 = dot(uv, uv);
    let crtUV = uv * (1.0 + r2 * curv * 0.3);
    let edgeFade = 1.0 - smoothstep(0.92, 1.0, abs(crtUV.y));
    let vigAmount = clamp(1.0 - r2 * vig * vig, 0.0, 1.0);
    return edgeFade * vigAmount;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(camcordercrt1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = camcordercrt1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
