tests/snapshots/compile__wgsl_effect_chromaticaberration_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_chromaticaberration1_angle: f32,
    u_control_chromaticaberration1_centerX: f32,
    u_control_chromaticaberration1_centerY: f32,
    u_control_chromaticaberration1_offset: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn chromaticaberration1_output(uv: vec2f) -> vec4f {
    let offset = u.u_control_chromaticaberration1_offset;
    let angle = (u.u_control_chromaticaberration1_angle) * 2.0 * PI;
    let center = vec2f(u.u_control_chromaticaberration1_centerX, u.u_control_chromaticaberration1_centerY);
    let toCenter = uv - center;
    let dist = length(toCenter);
    let dir = select(toCenter / dist, vec2f(1.0, 0.0), dist < 0.001);
    let cs = cos(angle);
    let sn = sin(angle);
    let rotated = vec2f(dir.x * cs - dir.y * sn, dir.x * sn + dir.y * cs);
    let push = rotated * offset * dist;
    let uvR = uv - push;
    let uvG = uv;
    let uvB = uv + push;
    let r = unpremultiply(defaultUvMap(uvR)).r;
    let g = unpremultiply(defaultUvMap(uvG));
    let b = unpremultiply(defaultUvMap(uvB)).b;
    return premultiply(vec4f(r, g.g, b, g.a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return chromaticaberration1_output(uv);
}
